--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -25,8 +25,10 @@
 }
 
 .site-nav {
-    float: right;
+    float: left;
     line-height: 56px;
+    position: fixed;
+    margin: 20px 50px 20px 50px;
 
     .menu-icon {
         display: none;
@@ -35,6 +37,7 @@
     .page-link {
         color: $text-color;
         line-height: $base-line-height;
+        display: block;
 
         // Gaps between nav items, but not on the last one
         &:not(:last-child) {
