--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
+    // border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
@@ -28,21 +28,43 @@
     float: left;
     line-height: 56px;
     position: fixed;
-    margin: 20px 50px 20px 50px;
+    // border-right: 1px solid #000;
+    height: 100%;
+    background-color: #42CFC4;
+    
+    .nav-inbetween-box {
+    margin: auto;
+    height: 100%;
+    // padding-top: 10%;
+    // padding-bottom: 10%;
+    }
 
     .menu-icon {
         display: none;
+
     }
 
     .page-link {
         color: $text-color;
         line-height: $base-line-height;
         display: block;
+        text-align: left;
+        padding: 50px 100px;
+        background-color: #42CFC4;
+        height: 25%;
 
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 20px;
+        &:hover {
+            color: #45ADA8;
+            background: #FFFFFF;
+            text-decoration: none;
+            transition: none 200ms ease-out;
+            transition-property: color, background;
         }
+
+        // // Gaps between nav items, but not on the last one
+        // &:not(:last-child) {
+        //     margin-right: 20px;
+        // }
     }
 
     @include media-query($on-palm) {
