--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -13,9 +13,10 @@ body {
 }
 
 .profile-photo {
-  width: 30%;
+  width: 40%;
   border-radius: 50%;
   opacity: 0.7;
+  min-width: 250px;
 }
 
 // .icons {
