--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <!-- <h2 class="footer-heading">{{ site.title }}</h2> -->
 
-    <div class="footer-col-wrapper">
+<!--     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
@@ -18,9 +18,21 @@
         <a href="https://medium.com/@pinglinh" target="_blank"><i class="fa fa-medium"></i></a>
         <a href="https://500px.com/pinglinh" target="_blank"><i class="fa fa-500px"></i></a>
         <a href="https://github.com/pinglinh" target="_blank"><i class="fa fa-github-alt"></i></a>
-      </div>
+      </div> -->
 
       <div class="footer-col footer-col-3">
+        <ul class="contact-list">
+          <li>{{ site.title }}</li>
+          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        </ul>
+
+        <a href="https://uk.linkedin.com/in/lnguyenmy" target="_blank"><i class="fa fa-linkedin"></i></a>
+        <a href="https://twitter.com/pinglinh" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://medium.com/@pinglinh" target="_blank"><i class="fa fa-medium"></i></a>
+        <a href="https://500px.com/pinglinh" target="_blank"><i class="fa fa-500px"></i></a>
+        <a href="https://github.com/pinglinh" target="_blank"><i class="fa fa-github-alt"></i></a>
+
+
         <p>{{ site.description }}</p>
       </div>
     </div>
