--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,18 +20,21 @@
         <a href="https://github.com/pinglinh" target="_blank"><i class="fa fa-github-alt"></i></a>
       </div> -->
 
-      <div class="footer-col footer-col-3">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
+      <div class="footer">
+        
+        <div class="title-mail">
+        {{ site.title }}
+        <br>
+        <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+        </div>
 
+        <div class="social-media">
         <a href="https://uk.linkedin.com/in/lnguyenmy" target="_blank"><i class="fa fa-linkedin"></i></a>
         <a href="https://twitter.com/pinglinh" target="_blank"><i class="fa fa-twitter"></i></a>
         <a href="https://medium.com/@pinglinh" target="_blank"><i class="fa fa-medium"></i></a>
         <a href="https://500px.com/pinglinh" target="_blank"><i class="fa fa-500px"></i></a>
         <a href="https://github.com/pinglinh" target="_blank"><i class="fa fa-github-alt"></i></a>
-
+        </div>
 
         <p>{{ site.description }}</p>
       </div>
