--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,17 +23,16 @@
       <div class="footer">
         
         <div class="title-mail">
-        {{ site.title }}
-        <br>
-        <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+        {{ site.title }} | www.pinglinh.com
         </div>
 
         <div class="social-media">
-        <a href="https://uk.linkedin.com/in/lnguyenmy" target="_blank"><i class="fa fa-linkedin"></i></a>
-        <a href="https://twitter.com/pinglinh" target="_blank"><i class="fa fa-twitter"></i></a>
-        <a href="https://medium.com/@pinglinh" target="_blank"><i class="fa fa-medium"></i></a>
-        <a href="https://500px.com/pinglinh" target="_blank"><i class="fa fa-500px"></i></a>
-        <a href="https://github.com/pinglinh" target="_blank"><i class="fa fa-github-alt"></i></a>
+        <a href="https://uk.linkedin.com/in/lnguyenmy" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+        <a href="https://twitter.com/pinglinh" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+        <a href="https://medium.com/@pinglinh" target="_blank"><i class="fa fa-medium fa-2x"></i></a>
+        <a href="https://500px.com/pinglinh" target="_blank"><i class="fa fa-500px fa-2x"></i></a>
+        <a href="https://github.com/pinglinh" target="_blank"><i class="fa fa-github-alt fa-2x"></i></a>
+        <a href="mailto:{{ site.email }}"><i class="fa fa-envelope fa-2x"></i></a>
         </div>
 
         <p>{{ site.description }}</p>
