--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -100,6 +100,11 @@ body {
   padding: 0px 5px 0px 5px;
 }
 
+.fa-envelope {
+  color: #F25C4E;
+  padding: 0 5px;
+}
+
 .fa-times {
   color: #272822; 
 }
