--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,10 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$nav-link-height: 100vh;
+$nav-link-number: 6;
+
+
 // Width of the content area
 $content-width:    800px;
 
