Finally managed to make icons inline with text in nav bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,12 @@
             </svg>
           </a>
           <div class="trigger">
-            <a class="page-link" href="{{ site.baseurl }}/">Home</a>
-            <a class="page-link" href="{{ site.baseurl }}/aboutme">About Me</a>
-            <a class="page-link" href="{{ site.baseurl }}/mywork">My Work</a>
-            <a class="page-link" href="{{ site.baseurl }}/blog">Blog</a>
-            <a class="page-link" href="{{ site.baseurl }}/contact">Contact</a>
-            <a class="page-link" href="{{ site.baseurl }}/pinglinhcv.pdf" target="_blank" download="Pinglinh CV">CV</a>
+            <a class="page-link" href="{{ site.baseurl }}/"><span><i class="fa fa-map-marker fa-lg"></i> Home</span></a>
+            <a class="page-link" href="{{ site.baseurl }}/aboutme"><span><i class="fa fa-user fa-lg"></i> About Me</span></a>
+            <a class="page-link" href="{{ site.baseurl }}/mywork"><span><i class="fa fa-laptop fa-lg"></i> My Work</span></a>
+            <a class="page-link" href="{{ site.baseurl }}/blog"><span><i class="fa fa-book fa-lg"></i> Blog</span></a>
+            <a class="page-link" href="{{ site.baseurl }}/contact"><span><i class="fa fa-envelope fa-lg"></i> Contact</span></a>
+            <a class="page-link" href="{{ site.baseurl }}/pinglinhcv.pdf" target="_blank" download="Pinglinh CV"><span><i class="fa fa-file-pdf-o fa-lg"></i> CV</span></a>
 
 
 
