--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -100,7 +100,7 @@ body {
   padding: 0px 5px 0px 5px;
 }
 
-.fa-envelope {
+.fa-envelope:not(.different) {
   color: #F25C4E;
   padding: 0 5px;
 }
