--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -63,7 +63,12 @@ body {
     // flex-direction: column;
     // height: 100%;
     
-
+    
+    .current {
+        color: #45ADA8;
+        background-color: #FFFFFF;
+    }
+    
     .menu-icon {
         display: none;
     }
