--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
             
 
             <a class="page-link" href="{{ site.baseurl }}/"><span><i class="fa fa-map-marker fa-lg"></i> Home</span></a>
-            <a class="page-link" href="{{ site.baseurl }}/aboutme/" {% if page.url == '/aboutme' %} class="current" {% endif %}><span><i class="fa fa-user fa-lg"></i> About Me</span></a>
-            <a class="page-link" href="{{ site.baseurl }}/mywork" {% if page.url == '/mywork' %} class="current" {% endif %}><span><i class="fa fa-laptop fa-lg"></i> My Work</span></a>
-            <a class="page-link" href="{{ site.baseurl }}/blog" {% if page.url == '/blog' %} class="current" {% endif %}><span><i class="fa fa-book fa-lg"></i> Blog</span></a>
-            <a class="page-link" href="{{ site.baseurl }}/contact" {% if page.url == '/contact' %} class="current" {% endif %}><span><i class="fa fa-envelope different fa-lg"></i> Contact</span></a>
+            <a class="page-link {% if page.url == '/aboutme/' %} current {% endif %}" href="{{ site.baseurl }}/aboutme/"><span><i class="fa fa-user fa-lg"></i> About Me</span></a>
+            <a class="page-link {% if page.url == '/mywork/' %} current {% endif %}" href="{{ site.baseurl }}/mywork"><span><i class="fa fa-laptop fa-lg"></i> My Work</span></a>
+            <a class="page-link {% if page.url == '/blog/' %} current {% endif %}" href="{{ site.baseurl }}/blog"><span><i class="fa fa-book fa-lg"></i> Blog</span></a>
+            <a class="page-link {% if page.url == '/contact/' %} current {% endif %}" href="{{ site.baseurl }}/contact"><span><i class="fa fa-envelope different fa-lg"></i> Contact</span></a>
             <a class="page-link" href="{{ site.baseurl }}/pinglinhcv.pdf" target="_blank" download="Pinglinh CV"><span><i class="fa fa-file-pdf-o fa-lg"></i> CV</span></a>
 
 
@@ -55,3 +55,4 @@
 </body>
 
 </html>
+
