Changed header font and changed footer wording

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,9 @@
       <div class="footer">
 
         <div class="title-mail">
-        {{ site.title }} | www.pinglinh.com
+        made with <span style="color: #D65F5F">&hearts;</span> by <span style="color: #d1e9d2">Linh Nguyen My</span>
+
+        <!-- {{ site.title }} | www.pinglinh.com -->
         </div>
 
         <div class="social-media">
