--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" href="{{ "/css/fontawesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "/css/animate.css" | prepend: site.baseurl }}">
 <!-- <link rel="stylesheet" href="{{ "/css/stylesheet.css" | prepend: site.baseurl }}"> -->
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Montserrat|Damion' rel='stylesheet'>
+<!--   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet" type='text/css'> -->
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
