--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,10 +35,11 @@ body {
 }
 
 .site-title {
+    font-family: 'Damion', cursive;
     font-size: 26px;
     font-weight: 300;
-    line-height: 56px;
-    letter-spacing: -1px;
+    line-height: 100px;
+    letter-spacing: 5px;
     margin-bottom: 0;
 
     &,
