--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #EEEEEE; //changed
+$background-color: #EEEEEE;
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
