Changed font size, style and colour of footer text

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
       <div class="footer">
 
         <div class="title-mail">
-        made with <span style="color: #D65F5F">&hearts;</span> by <span style="color: #d1e9d2">Linh Nguyen My</span>
+        made with <span style="color: #D65F5F"><strong>&hearts;</strong></span> by <span style="color: #56dbc9"><strong>Linh Nguyen My</strong></span> | &copy; 2016 
 
         <!-- {{ site.title }} | www.pinglinh.com -->
         </div>
