--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -184,6 +184,8 @@ body {
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
+    font-size: 0.85em;
+    color: #454545;
 }
 
 .footer {
