Fixed nav highlight on contact and blog page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
             
             <a class="page-link-3 {% if page.url == '/blog/' %} current {% endif %}" href="{{ site.baseurl }}/blog"><span><i class="fa fa-book fa-lg"></i> Blog</span></a>
             
-            <a class="page-link-3 {% if page.url == '/mywork/' %} current {% endif %}" href="{{ site.baseurl }}/contact"><span><i class="fa fa-envelope different fa-lg"></i> Contact</span></a>
+            <a class="page-link-3 {% if page.url == '/contact/' %} current {% endif %}" href="{{ site.baseurl }}/contact"><span><i class="fa fa-envelope different fa-lg"></i> Contact</span></a>
             
             <a class="page-link-3" href="{{ site.baseurl }}/pinglinhcv.pdf" target="_blank" download="Pinglinh CV"><span><i class="fa fa-file-pdf-o fa-lg"></i> CV</span></a>
 
