--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,22 +21,25 @@
 
       <div class="footer">
 
+
+        <div class="social-media">
+        <a href="https://uk.linkedin.com/in/lnguyenmy" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
+        <a href="https://twitter.com/pinglinh" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
+        <a href="https://medium.com/@pinglinh" target="_blank"><i class="fa fa-medium fa-lg"></i></a>
+        <a href="https://500px.com/pinglinh" target="_blank"><i class="fa fa-500px fa-lg"></i></a>
+        <a href="https://github.com/pinglinh" target="_blank"><i class="fa fa-github-alt fa-lg"></i></a>
+        <a href="mailto:{{ site.email }}"><i class="fa fa-envelope fa-lg"></i></a>
+        </div>
+
         <div class="title-mail">
         made with <span style="color: #D65F5F"><strong>&hearts;</strong></span> by <span style="color: #56dbc9"><strong>Linh Nguyen My</strong></span> | &copy; 2016 
 
         <!-- {{ site.title }} | www.pinglinh.com -->
         </div>
 
-        <div class="social-media">
-        <a href="https://uk.linkedin.com/in/lnguyenmy" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
-        <a href="https://twitter.com/pinglinh" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
-        <a href="https://medium.com/@pinglinh" target="_blank"><i class="fa fa-medium fa-2x"></i></a>
-        <a href="https://500px.com/pinglinh" target="_blank"><i class="fa fa-500px fa-2x"></i></a>
-        <a href="https://github.com/pinglinh" target="_blank"><i class="fa fa-github-alt fa-2x"></i></a>
-        <a href="mailto:{{ site.email }}"><i class="fa fa-envelope fa-2x"></i></a>
-        </div>
 
-        <p>{{ site.description }}</p>
+
+        <!-- <p>{{ site.description }}</p> -->
 
       
     </div>
