--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -454,6 +454,7 @@ body {
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
+    text-align: center;
 
     @include media-query($on-laptop) {
         font-size: 36px;
