--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -13,10 +13,9 @@ body {
   border-radius: 50%;
   opacity: 0.7;
   min-width: 250px;
-}
-
-.profile-photo:hover {
-  opacity: 1;
+   &:hover {
+    opacity: 1;
+   }
 }
 
 .profile-photo-aboutme {
@@ -25,10 +24,10 @@ body {
   opacity: 0.7;
   min-width: 250px;
   float: left;
-}
-
-.profile-photo-aboutme:hover {
-  opacity: 1;
+  margin: 0 5vh 5vh 5vh;
+   &:hover {
+    opacity: 1;
+   }
 }
 
 // .icons {
