Styled placeholders for my work page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -323,6 +323,13 @@ body {
     }
 }
 
+// My Work page
+.work-preview {
+  margin: 50px;
+  text-align: center;
+  display: inline-block;
+}
+
 
 
 /**
