Changed the placeholder image size on mywork page and added text under it

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -325,8 +325,7 @@ body {
 
 // My Work page
 .work-preview {
-  margin: 50px;
-  text-align: center;
+  margin: 2vh;
   display: inline-block;
   position: relative;
 }
