--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 <!-- 		<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
 		    <link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css"> -->
 	<link rel="stylesheet" href="{{ "/css/fontawesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/bootstrap/bootstrap.min.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "/css/animate.css" | prepend: site.baseurl }}">
 <!-- <link rel="stylesheet" href="{{ "/css/stylesheet.css" | prepend: site.baseurl }}"> -->
 	<link href='https://fonts.googleapis.com/css?family=Montserrat|Damion|Lato' rel='stylesheet'>
