--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -328,6 +328,12 @@ body {
   margin: 2vh;
   display: inline-block;
   position: relative;
+  width: 80%;
+  min-width: 250px;
+}
+
+.my-work {
+  margin: 0 auto;
 }
 
 
