--- a/css/main.scss
+++ b/css/main.scss
@@ -52,6 +52,7 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
  @import
  		"aboutme",
+ 		"mywork",
         "base",
         "layout",
         "syntax-highlighting",
