--- a/_sass/_aboutme.scss
+++ b/_sass/_aboutme.scss
@@ -1,14 +1,14 @@
 .profile-photo-aboutme {
-  width: 40%;
+  width: 80%;
   border-radius: 50%;
   opacity: 0.7;
-  min-width: 250px;
-  float: left;
+  // min-width: 250px;
+  margin: 20px 0;
    &:hover {
     opacity: 1;
    }
 }
 
 .about-me-intro {
-  padding: 100px;
+  margin: 0 auto;
 }
