--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,9 +93,10 @@ h1, h2, h3, h4, h5, h6 {
 a {
     color: $brand-color;
     text-decoration: none;
+    font-weight: bold;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        color: #C0C0C0;
     }
 
     &:hover {
