--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     30px;
 
 $text-color:       #111111;
 $background-color: #EEEEEE;
-$brand-color:      #2a7ae2;
+$brand-color:      #13C3B2;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
