Added a form to contact page

--- a/css/main.scss
+++ b/css/main.scss
@@ -53,6 +53,7 @@ $on-laptop:        800px;
  @import
  		"aboutme",
  		"mywork",
+ 		"contact",
         "base",
         "layout",
         "syntax-highlighting",
