Cleaned up default html and layout css files

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -182,7 +182,7 @@ body {
             padding-bottom: 5px;
         }
 
-        .page-link {
+        .page-link-3 {
             display: block;
             padding: 5px 10px;
 
