--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="{{ "/css/fontawesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/bootstrap/bootstrap.min.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "/css/animate.css" | prepend: site.baseurl }}">
+  <link rel="icon" href="{{ "/photos/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
 <!-- <link rel="stylesheet" href="{{ "/css/stylesheet.css" | prepend: site.baseurl }}"> -->
 	<link href='https://fonts.googleapis.com/css?family=Montserrat|Damion|Lato' rel='stylesheet'>
 <!--   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet" type='text/css'> -->
