Changed jekyll nav blog post from md to markdown and hidden welcome to jekyll post

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -349,7 +349,7 @@ body {
 
 .post-content {
   margin-bottom: $spacing-unit;
-  margin: auto 2em;
+  margin: auto 20%;
 
   h2 {
     font-size: 32px;
