--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -4,7 +4,7 @@ form {
 		background-color: $grey-color-light;
 		text-align: center;
 		border: 2px solid #CCCCCC;
-		margin: 10px 0; 
+		margin: 10px 0;
 		width: 100%;
 		padding: 10px;
 		border-radius: 4px;
@@ -13,7 +13,7 @@ form {
 
 	textarea {
 		border: 2px solid #CCCCCC;
-		margin: 10px 0; 
+		margin: 10px 0;
 		width: 100%;
 		text-align: left;
 		padding: 10px;
@@ -23,40 +23,40 @@ form {
 
 		background-size: 20px 20px;
 	    background-image: url('../photos/compose.svg');
-	    background-position: 11px 10px; 
+	    background-position: 11px 10px;
 	    background-repeat: no-repeat;
 	    padding-left: 40px;
 
 		&:focus {
 			outline: none;
-			border-color: #272822; 
-		}	
+			border-color: #272822;
+		}
 	}
 
 	input[type=text] {
 		border: 2px solid #CCCCCC;
-		margin: 10px 0; 
+		margin: 10px 0;
 		width: 100%;
 		text-align: left;
 		padding: 10px;
 		background-color: transparent;
 		border-radius: 4px;
-		
+
 		background-size: 20px 20px;
 	    background-image: url('../photos/person.svg');
-	    background-position: 10px 10px; 
+	    background-position: 10px 10px;
 	    background-repeat: no-repeat;
 	    padding-left: 40px;
 
 		&:focus {
 			outline: none;
-			border-color: #272822; 
-		}			
+			border-color: #272822;
+		}
 	}
 
 	input[type=email] {
 		border: 2px solid #CCCCCC;
-		margin: 10px 0; 
+		margin: 10px 0;
 		width: 100%;
 		text-align: left;
 		padding: 10px;
@@ -65,13 +65,13 @@ form {
 
 		background-size: 20px 20px;
 	    background-image: url('../photos/envelope.svg');
-	    background-position: 10px 10px; 
+	    background-position: 10px 10px;
 	    background-repeat: no-repeat;
 	    padding-left: 40px;
 
 		&:focus {
 			outline: none;
-			border-color: #272822; 
+			border-color: #272822;
 		}
 
 	}
@@ -81,4 +81,8 @@ form {
 		width: 100%;
 	}
 
+}
+
+.contact-text {
+	text-align: center;
 }
